--- a/index.html
+++ b/index.html
@@ -4,15 +4,81 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Slider Syncing</title>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="your-class">
-            <div>your content</div>
-            <div>your content</div>
-            <div>your content</div>
+    <div class="container slider-for">
+        <div>
+            <img src="./img/1.jpg" alt="1" width="610px" height="420px">
+        </div>
+        <div>
+            <img src="./img/2.jpg" alt="2" width="610px" height="420px">
+        </div>
+        <div>
+            <img src="./img/3.jpg" alt="3" width="610px" height="420px">
+        </div>
+        <div>
+            <img src="./img/4.jpg" alt="4" width="610px" height="420px">
+        </div>
+        <div>
+            <img src="./img/5.jpg" alt="5" width="610px" height="420px">
+        </div>
+        <div>
+            <img src="./img/6.jpg" alt="6" width="610px" height="420px">
+        </div>
+        <div>
+            <img src="./img/7.jpg" alt="7" width="610px" height="420px">
+        </div>
+        <div>
+            <img src="./img/8.jpg" alt="8" width="610px" height="420px">
+        </div>
+        <div>
+            <img src="./img/9.jpg" alt="9" width="610px" height="420px">
+        </div>
+        <div>
+            <img src="./img/10.jpg" alt="10" width="610px" height="420px">
         </div>
     </div>
+
+    <div class="container slider-nav">
+        <div>
+            <img src="./img/1.jpg" alt="1" width="610px" height="210px">
+        </div>
+        <div>
+            <img src="./img/2.jpg" alt="2" width="610px" height="210px">
+        </div>
+        <div>
+            <img src="./img/3.jpg" alt="3" width="610px" height="210px">
+        </div>
+        <div>
+            <img src="./img/4.jpg" alt="4" width="610px" height="210px">
+        </div>
+        <div>
+            <img src="./img/5.jpg" alt="5" width="610px" height="210px">
+        </div>
+        <div>
+            <img src="./img/1.jpg" alt="1" width="610px" height="210px">
+        </div>
+        <div>
+            <img src="./img/7.jpg" alt="7" width="610px" height="210px">
+        </div>
+        <div>
+            <img src="./img/8.jpg" alt="8" width="610px" height="210px">
+        </div>
+        <div>
+            <img src="./img/9.jpg" alt="9" width="610px" height="210px">
+        </div>
+        <div>
+            <img src="./img/10.jpg" alt="10" width="610px" height="210px">
+        </div>
+    </div>
+
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="./js/slick.js"></script>
 </body>
 </html>
